--- a/build.gradle
+++ b/build.gradle
@@ -43,13 +43,16 @@ dependencies {
     implementation project(':hmt')
     implementation project(':ktx')
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    api 'com.artifex.mupdf:viewer:1.15.1'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // Kotlin
-    implementation "androidx.core:core-ktx:1.0.2"
+    implementation "androidx.core:core-ktx:1.1.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 repositories {
