--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.1"
+    buildToolsVersion "29.0.2"
     defaultConfig {
         minSdkVersion 24
         targetSdkVersion 29
@@ -42,10 +42,12 @@ dependencies {
     implementation project(':core')
     implementation project(':hmt')
     implementation project(':ktx')
+    implementation project(':sensors')
 
     api 'com.artifex.mupdf:viewer:1.15.1'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.webkit:webkit:1.1.0'
     implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
